# box3d-for-sable

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: build.yml
common/: build.gradle
common/src/main/java/in/zaafon/box3d_for_sable/: Box3DConstraintHandle.java  Box3DForSableConfig.java  Box3DNative.java  Box3DPhysicsPipeline.java  Box3DPhysicsPipelineProvider.java  Box3DPhysicsScene.java  Box3DRopeHandle.java
common/src/main/java/in/zaafon/box3d_for_sable/box/: Box3DBoxHandle.java
common/src/main/java/in/zaafon/box3d_for_sable/collider/: Box3DVoxelColliderBakery.java  Box3DVoxelColliderData.java  PhysicsColliderBlockGetter.java
common/src/main/java/in/zaafon/box3d_for_sable/mixin/: DebugScreenOverlayMixin.java  SubLevelPhysicsSystemMixin.java
common/src/main/native/: CMakeLists.txt  sable_box3d_jni.cpp
common/src/main/resources/: box3d_for_sable.mixins.json
fabric/: build.gradle
fabric/src/main/java/in/zaafon/box3d_for_sable/fabric/: Box3DForSableFabric.java
fabric/src/main/resources/: fabric.mod.json
neoforge/: build.gradle
neoforge/src/main/java/in/zaafon/box3d_for_sable/neoforge/: Box3DForSableNeoForge.java
